@@ -7,6 +7,7 @@ o Added Depends data -- dependencies of r packages (rev 192)
 o Fixed buglet in seq_loglm() not respecting arrays
 o Added seq_mosaic() (rev 194)
 o Added CyclingDeaths data (rev 196)
+o mosaic3d() gets an interpolate= option to control shading levels (rev 197)
 
 Version 0.5-11 (2013-07-01)
 
